--- a/css/custom.css
+++ b/css/custom.css
@@ -8,14 +8,21 @@ html body {
 
 header {
   width: 100%;
-  height: 100px;
+  height: 100%;
+  max-height:110px;
   text-align: center;
   background: white;
   top: 0;
   position: fixed;
+  z-index: 10;
 }
 
-nav {
+.nav {
+  background: white;
+  padding-left: 10%;
+}
+
+/*nav {
   width: 100%;
   max-width: 80%;
   height: 100%;
@@ -23,10 +30,11 @@ nav {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-}
+  z-index: 1;
+}*/
 
 .container {
-  margin-top: 3%;
+  margin-top: 120px;
 }
 
 .form-control {
@@ -51,7 +59,9 @@ nav {
 footer {
   background: white;
   position: fixed;
+  text-align: center;
   width: 100%;
   bottom: 0;
-  text-align: center;
+  border-top: 1px solid #dddddd;
+  z-index: 9;
 }
