--- a/templates/header.html
+++ b/templates/header.html
@@ -1,1 +1,8 @@
-<h1>FreeBug</h1>
+<h1>Galaxy Swiss Bourdin </h1>
+<ul class="nav nav-tabs">
+  <li><a href="index.php"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
+  <li><a href="works.php"><span class="glyphicon glyphicon-th-large"></span> Travaux</a></li>
+  <li><a href="contact.php"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
+  <li><a href="planning.php"><span class="glyphicon glyphicon-envelope"></span> Planning</a></li>
+  <li><a href="webservice.php"><span class="glyphicon glyphicon-envelope"></span> WebService</a></li>
+</ul>
