--- a/css/custom.css
+++ b/css/custom.css
@@ -1,54 +1,51 @@
-html body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #FAFAFA;
+.main {
+  top: 51px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
-header {
-  width: 100%;
-  height: 100%;
-  max-height:110px;
-  text-align: center;
-  background: white;
-  margin-top: 0;
-  padding-top: 0;
-  top: 0;
-  position: absolute;
-  z-index: 10;
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 31px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #363636;
+    border-right: 1px solid #eee;
+  }
 }
 
-.nav {
-  background: white;
-  padding-left: 10%;
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
 }
 
-/*nav {
-  width: 100%;
-  max-width: 80%;
-  height: 100%;
-  margin-top: 110px;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  z-index: 1;
-}*/
-
-.container {
-  position: absolute;
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
 }
 
-.form-control {
-  max-width: 300px;
+.nav>li>a:hover, .nav>li>a:focus {
+  text-decoration: none;
+  background-color: #428bca;
 }
 
-footer {
-  background: white;
-  position: relative;
-  clear:both;
-  margin-top: -150px;
-  text-align: center;
-  width: 100%;
-  border-top: 1px solid #dddddd;
+#menu-gauche .nav > li > a {
+	color: #FFFFFF;
+	height: 58px;
+    line-height: 38px;
+    padding-left: 30px;
+    border-bottom: 1px solid #4F4F4F;
+    transition: border-color 0.1s ease-in-out 0s, background-color 0.2s ease-in-out 0s, box-shadow 0.1s ease-in-out 0s;
+    overflow: hidden;
 }
