--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,27 @@
-<ul class="nav nav-tabs">
-  <li><a href="index.php"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
-  <li><a href="works.php"><span class="glyphicon glyphicon-th-large"></span> Travaux</a></li>
-  <li><a href="contact.php"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
-  <li><a href="planning.php"><span class="glyphicon glyphicon-envelope"></span> Planning</a></li>
-</ul>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.php">GSB</a>
+    </div>
+    <div class="navbar-collapse collapse ">
+      <ul class="nav navbar-nav navbar-right">
+        <li id='dashboard'><a href='dashboard.php'>Dashboard</a></li>
+        <li id='planning'><a href='planning.php'>Planning</a></li>
+        <li>
+          <a data-toggle="dropdown"><?php echo strtolower($_SESSION['nom']) ?></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Mes paramètres</a></li>
+            <li><a href="fonctions/deconnexion.php">Déconnexion</a></li>
+          </ul>
+        </li>
+        <li id='contact'><a href='contact.php'>Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
