--- a/templates/nav.html
+++ b/templates/nav.html
@@ -14,7 +14,7 @@
         <li id='dashboard'><a href='dashboard.php'>Dashboard</a></li>
         <li id='planning'><a href='planning.php'>Planning</a></li>
         <li>
-          <a data-toggle="dropdown"><?php echo strtolower($_SESSION['nom']) ?></a>
+          <a data-toggle="dropdown"><?php echo ucfirst(strtolower($_SESSION['nom'])) ?></a>
           <ul class="dropdown-menu">
             <li><a href="#">Mes paramètres</a></li>
             <li><a href="fonctions/deconnexion.php">Déconnexion</a></li>
